Process Hacker

1.3.2.0
 * NEW:
   * Network tab - shows current network connections
   * KProcessHacker - a kernel-mode driver for Process Hacker which 
     finally enables Process Hacker to display all file handles and 
     have full control over the system. Note that this will NOT 
     bypass user-mode rootkits like HackerDefender!
 * FIXED:
   * Now the process tree and service list update instantly after 
     starting Process Hacker instead of waiting

1.3.1.0
 * SUMMARY: This version adds many small but useful features. It is 
   also more useful when trying to fight malware, thanks to 
   digital signature verification and packed executable detection.
 * NEW:
   * "Free" and "Decommit" actions for memory regions
   * "Description" column for processes
   * Current Directory for processes automatically updates
   * Can now display the file names of DRM-protected 
     processes (like audiodg.exe)
   * Now displays thread information under the thread list
   * Module file name info for thread start addresses 
     and stack traces
   * Highlighting for .NET processes and packed executables
   * Shows CPU usage and physical memory usage in the status bar
   * "Reload Struct Definitions" menu item
   * Struct Searcher - displays addresses which match the specified 
     struct definition
   * Ability to unload remote modules (by remote thread 
     injection)
   * New float and double types for structs
   * Special tooltip info for rundll32.exe
   * Verifies file signatures (and detects Windows components by 
     checking the files' owners and ACLs)
   * Highlights processes which have invalid signatures or are 
     pretending to be system processes
   * Better method for suspending/resuming processes
 * FIXED:
   * System information window resizing
   * "Overflow error" exceptions
   * Problems with the search button
   * Process properties for DPCs and Interrupts
   * Disabled expanding of processes when double-clicking 
     them