@@ -48,6 +48,7 @@ namespace ProcessHacker
             checkHideWhenMinimized.Checked = Properties.Settings.Default.HideWhenMinimized;
             checkVerifySignatures.Checked = Properties.Settings.Default.VerifySignatures;
             checkEnableKPH.Checked = Properties.Settings.Default.EnableKPH;
+            checkStartHidden.Checked = Properties.Settings.Default.StartHidden;
 
             textHighlightingDuration.Value = Properties.Settings.Default.HighlightingDuration;
             colorNewProcesses.Color = Properties.Settings.Default.ColorNewProcesses;
@@ -95,6 +96,7 @@ namespace ProcessHacker
             Properties.Settings.Default.UnitSpecifier =
                 Array.IndexOf(Misc.SizeUnitNames, comboSizeUnits.SelectedItem);
             Properties.Settings.Default.VerifySignatures = checkVerifySignatures.Checked;
+            Properties.Settings.Default.StartHidden = checkStartHidden.Checked;
 
             if (checkEnableKPH.Checked && !Properties.Settings.Default.EnableKPH)
             {
@@ -153,11 +155,14 @@ namespace ProcessHacker
             if (checkShowTrayIcon.Checked)
             {
                 checkHideWhenMinimized.Enabled = true;
+                checkStartHidden.Enabled = true;
             }
             else
             {
                 checkHideWhenMinimized.Enabled = false;
                 checkHideWhenMinimized.Checked = false;
+                checkStartHidden.Enabled = false;
+                checkStartHidden.Checked = false;
             }
         }
     }
