@@ -226,6 +226,9 @@
             <setting name="EnableKPH" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="StartHidden" serializeAs="String">
+                <value>False</value>
+            </setting>
         </ProcessHacker.Properties.Settings>
     </userSettings>
 </configuration>
